# dev_aduana

./: .env.example  .gitignore  AGENTS.md  README.md  con1.sh  cont.sh  docker-compose.yml
computer_vision/: Dockerfile  Dockerfile.test  README.md  dibujo.py
computer_vision/app/: Makefile  aduana_test.cpp  deepstream_server_app.cpp  pipeline_test3.c  pipeline_test3.cpp  redis_bridge.cpp  redis_bridge.hpp  snapshot_sender.cpp  snapshot_sender.h
computer_vision/config/: confidence_thresholds.txt  config.yml  config_det10g.yml  config_facerec.yml  config_nvdsanalytics.txt  config_retinaface.yml  config_tracker_IOU.yml  config_trafficcamnet_lpr.yml  config_yolov9.yml  dsserver_config.yml  pipeline_config.yml  video_output.txt
computer_vision/models/retinaface_det10g/: CMakeLists.txt  config_infer_primary_det10g.txt  nvdsparsebbox_det10g.cpp  pgie_config.yml  sgie0_retinaface.yml  sgie1_retinaface.yml
deepstream-service/: Dockerfile  README.md  docker-compose-snippet.yml
deepstream-service/app/: Makefile  analytics_probe.cpp  analytics_probe.hpp  deepstream_app.cpp  redis_publisher.cpp  redis_publisher.hpp  stream_manager.cpp  stream_manager.hpp
deepstream-service/bridge/: Makefile  (+16 more)
deepstream-service/bridge.bak/: redis_bridge.hpp
discovery/: Dockerfile  app.py  requirements.txt
django/: Dockerfile  docker-entrypoint.sh  nginx.conf  requirements.txt
event-stream-service/: main.py  requirements.txt
mediamtx/: Dockerfile  README.md  mediamtx.yml  read_index.html
ocr_vl/: Dockerfile  server.py
scripts/: recolor_background.py
videos/: debug_landmarks.py
(+221 files in other folders)
